--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <style>body{ background-color: 'blue'}</style>
+  <style type="text/css">body{ background-color: 'blue'}</style>
 </head>
 <body>
   <h1>Minh Thai Profile</h1>
