--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
-  <style type="text/css">body{ background-color: 'blue'}</style>
+  <style>
+    body {
+      background-color: aqua;
+    }
+  </style>
 </head>
 <body>
   <h1>Minh Thai Profile</h1>
