--- a/index.html
+++ b/index.html
@@ -1,13 +1,136 @@
 <html>
 <head>
-  <style>
-    body {
-      background-color: aqua;
-    }
-  </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="./assets/style.css" />
+  <title>Thai Luu profile</title>
 </head>
 <body>
-  <h1>Minh Thai Profile</h1>
+  <div class='landscape'>
+    <div class='moon'></div>
+    <div class='layer l1'>
+      <div class='hills'>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <div class='layer l2'>
+      <div class='hills'>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <div class='layer l3'>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+      <div class='la'>
+        <div class='l'></div>
+        <div class='l'></div>
+      </div>
+    </div>
+  </div>
+  <div class='layer l4'>
+    <pre id="typewriter">
+      <span class="var-highlight">type</span> Profile struct = {
+          name: <span class="string-highlight">'Luu Minh Thai'</span>,
+          email: <span class="string-highlight">'luu.minhthai09@gmail.com'</span>,
+          skills: <span class="string-highlight">'Nodejs, go, ruby, php, python, reactjs, angularjs, arduino'</span>,
+          similar with:[
+            <span class="string-highlight">'ec2'</span>,
+            <span class="string-highlight">'linux server'</span>,
+            <span class="string-highlight">'blockchain'</span>
+          ],
+          linkedIn: <a href="https://www.linkedin.com/in/thai-luu-810a37107/" target="_blank">Hire me</a>;
+      };
+    </pre>
+  </div>
+  <script src="./assets/script.js"></script>
 </body>
       
 </html>
