--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
             <span class="string-highlight">'linux server'</span>,
             <span class="string-highlight">'blockchain'</span>
           ],
-          linkedIn: <a href="https://www.linkedin.com/in/thai-luu-810a37107/" target="_blank">Hire me</a>;
+          linkedIn: <a href="https://www.linkedin.com/in/thai-luu-810a37107/" target="_blank">Hire me</a>,
+          contactMe: you_have_idea && you_want_do_it && time_start == now();
       };
     </pre>
   </div>
