--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <span class="string-highlight">'blockchain'</span>
           ],
           linkedIn: <a href="https://www.linkedin.com/in/thai-luu-810a37107/" target="_blank">Hire me</a>,
-          contactMe: you_have_idea && you_want_do_it && time_start == now();
+          contactMe: you_have_idea &amp;&amp; you_want_do_it &amp;&amp; time_start == now();
       };
     </pre>
   </div>
